2007-03-25 22:00  josep

	* client.c, xserver.cpp:

2007-03-25 19:04  alberto

	* xserver.cpp, xserver.h: ah

2007-03-25 03:04  alberto

	* Makefile, xserver.cpp, xserver.h: No hem trovaba comode amb
	  l\'antic code, aquesta nova versió es més fácil de lleguir, i
	  molt més clara i bonica \;)

2007-03-24 23:49  josep

	* cserver.cpp:

2007-03-24 18:31  alberto

	* python/client.py, python/netcommon.py, python/server.py: python
	  client ;)

2007-03-24 16:39  alberto

	* python/BaseApp.py, python/client.py, python/netcommon.py,
	  python/sdlogger.py: argh

2007-03-24 16:36  alberto

	* python/client.py, python/netcommon.py: client2

2007-03-24 16:34  alberto

	* ChangeLog, python/BaseApp.py, python/client.py,
	  python/sdlogger.py: properties

2007-03-24 13:11  alberto

	* python/server.py: small fix

2007-03-24 12:57  alberto

	* python/server.py: executable bit on server

2007-03-24 03:30  alberto

	* ChangeLog: Added changelog

2007-03-24 03:25  alberto

	* python/sd7netcore.py, python/server.py, python/server2.py: k

2007-03-24 03:20  alberto

	* python/server.py: This is not anymore part of the 7d7 server, but
	  its based on it, so remove its tag

2007-03-24 03:18  alberto

	* TODO, python/TODO: TODO lists

2007-03-24 03:10  alberto

	* python/BaseApp.py, python/client.py, python/sd7net.py,
	  python/server.py: Servidor implementat

2007-03-23 20:48  alberto

	* python/sd7net.py: argh

2007-03-23 20:47  alberto

	* python/sd7netcore.py, python/server2.py: Added sd7 engine
	  prototype servers

2007-03-23 19:47  alberto

	* cserver.c: kk

2007-03-23 18:59  alberto

	* Makefile, cserver.c: up

2007-03-23 17:15  alberto

	* client-incompleto.c, server-incompleto.c: dd

2007-03-23 16:34  alberto

	* cserver.c: 200 OK

2007-03-23 16:10  alberto

	* Makefile, cserver.c, cserver_old.c, python/sdlogger.py,
	  python/server.py: some sort of work was done

2007-03-23 14:47  alberto

	* python/server.py: ya ta

2007-03-23 14:46  alberto
